# sample-csv-rule-engine

./: Cargo.toml  README.md  test_data.csv  test_rules.json
benches/: rules.rs
src/: csv.rs  lib.rs  process.rs  rule.rs
